GUI CSS: Tiny fixes
fixed floatfilter box sizes and non-overlapping nform buttons

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -1194,7 +1194,7 @@ table.nform {
     }
 
     &.button {
-      margin: 0 5px 0 0;
+      margin: 1px 5px 0 0;
     }
   }
 
